# global-git

./: .gitignore  README.md  np.ipynb  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/global_git/: achievements.py  cli.py  config.py  default_config.yaml  gitglobal_cli.py  globe_animation.py  nancy_ned_animation.py  post_install.py  state.py  translator.py
src/global_git.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli_import.py  test_language_selection.py
